parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> decls comandos
Rule 2     decls -> decl ; decls
Rule 3     decls -> <empty>
Rule 4     decl -> tipo ID
Rule 5     decl -> tipo ID GALO expr
Rule 6     tipo -> CARNEIRO
Rule 7     tipo -> MACACO
Rule 8     tipo -> CAO
Rule 9     comandos -> comando ; comandos
Rule 10    comandos -> <empty>
Rule 11    comando -> TIGRE expr
Rule 12    comando -> COBRA ID
Rule 13    comando -> ID GALO expr
Rule 14    comando -> RATO expr { comandos } DRAGAO { comandos }
Rule 15    comando -> CAVALO expr { comandos }
Rule 16    expr -> expr BOI expr
Rule 17    expr -> expr SUB expr
Rule 18    expr -> expr MUL expr
Rule 19    expr -> expr DIV expr
Rule 20    expr -> expr MOD expr
Rule 21    expr -> expr GT expr
Rule 22    expr -> expr LT expr
Rule 23    expr -> expr EQ expr
Rule 24    expr -> ( expr )
Rule 25    expr -> INT_CONST
Rule 26    expr -> FLOAT_CONST
Rule 27    expr -> STRING
Rule 28    expr -> ID

Terminals, with rules where they appear

(                    : 24
)                    : 24
;                    : 2 9
BOI                  : 16
CAO                  : 8
CARNEIRO             : 6
CAVALO               : 15
COBRA                : 12
DIV                  : 19
DRAGAO               : 14
EQ                   : 23
FLOAT_CONST          : 26
GALO                 : 5 13
GT                   : 21
ID                   : 4 5 12 13 28
INT_CONST            : 25
LT                   : 22
MACACO               : 7
MOD                  : 20
MUL                  : 18
RATO                 : 14
STRING               : 27
SUB                  : 17
TIGRE                : 11
error                : 
{                    : 14 14 15
}                    : 14 14 15

Nonterminals, with rules where they appear

comando              : 9
comandos             : 1 9 14 14 15
decl                 : 2
decls                : 1 2
expr                 : 5 11 13 14 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24
programa             : 0
tipo                 : 4 5

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . decls comandos
    (2) decls -> . decl ; decls
    (3) decls -> .
    (4) decl -> . tipo ID
    (5) decl -> . tipo ID GALO expr
    (6) tipo -> . CARNEIRO
    (7) tipo -> . MACACO
    (8) tipo -> . CAO

    TIGRE           reduce using rule 3 (decls -> .)
    COBRA           reduce using rule 3 (decls -> .)
    ID              reduce using rule 3 (decls -> .)
    RATO            reduce using rule 3 (decls -> .)
    CAVALO          reduce using rule 3 (decls -> .)
    $end            reduce using rule 3 (decls -> .)
    CARNEIRO        shift and go to state 5
    MACACO          shift and go to state 6
    CAO             shift and go to state 7

    programa                       shift and go to state 1
    decls                          shift and go to state 2
    decl                           shift and go to state 3
    tipo                           shift and go to state 4

state 1

    (0) S' -> programa .



state 2

    (1) programa -> decls . comandos
    (9) comandos -> . comando ; comandos
    (10) comandos -> .
    (11) comando -> . TIGRE expr
    (12) comando -> . COBRA ID
    (13) comando -> . ID GALO expr
    (14) comando -> . RATO expr { comandos } DRAGAO { comandos }
    (15) comando -> . CAVALO expr { comandos }

    $end            reduce using rule 10 (comandos -> .)
    TIGRE           shift and go to state 10
    COBRA           shift and go to state 11
    ID              shift and go to state 12
    RATO            shift and go to state 13
    CAVALO          shift and go to state 14

    comandos                       shift and go to state 8
    comando                        shift and go to state 9

state 3

    (2) decls -> decl . ; decls

    ;               shift and go to state 15


state 4

    (4) decl -> tipo . ID
    (5) decl -> tipo . ID GALO expr

    ID              shift and go to state 16


state 5

    (6) tipo -> CARNEIRO .

    ID              reduce using rule 6 (tipo -> CARNEIRO .)


state 6

    (7) tipo -> MACACO .

    ID              reduce using rule 7 (tipo -> MACACO .)


state 7

    (8) tipo -> CAO .

    ID              reduce using rule 8 (tipo -> CAO .)


state 8

    (1) programa -> decls comandos .

    $end            reduce using rule 1 (programa -> decls comandos .)


state 9

    (9) comandos -> comando . ; comandos

    ;               shift and go to state 17


state 10

    (11) comando -> TIGRE . expr
    (16) expr -> . expr BOI expr
    (17) expr -> . expr SUB expr
    (18) expr -> . expr MUL expr
    (19) expr -> . expr DIV expr
    (20) expr -> . expr MOD expr
    (21) expr -> . expr GT expr
    (22) expr -> . expr LT expr
    (23) expr -> . expr EQ expr
    (24) expr -> . ( expr )
    (25) expr -> . INT_CONST
    (26) expr -> . FLOAT_CONST
    (27) expr -> . STRING
    (28) expr -> . ID

    (               shift and go to state 19
    INT_CONST       shift and go to state 20
    FLOAT_CONST     shift and go to state 21
    STRING          shift and go to state 22
    ID              shift and go to state 23

    expr                           shift and go to state 18

state 11

    (12) comando -> COBRA . ID

    ID              shift and go to state 24


state 12

    (13) comando -> ID . GALO expr

    GALO            shift and go to state 25


state 13

    (14) comando -> RATO . expr { comandos } DRAGAO { comandos }
    (16) expr -> . expr BOI expr
    (17) expr -> . expr SUB expr
    (18) expr -> . expr MUL expr
    (19) expr -> . expr DIV expr
    (20) expr -> . expr MOD expr
    (21) expr -> . expr GT expr
    (22) expr -> . expr LT expr
    (23) expr -> . expr EQ expr
    (24) expr -> . ( expr )
    (25) expr -> . INT_CONST
    (26) expr -> . FLOAT_CONST
    (27) expr -> . STRING
    (28) expr -> . ID

    (               shift and go to state 19
    INT_CONST       shift and go to state 20
    FLOAT_CONST     shift and go to state 21
    STRING          shift and go to state 22
    ID              shift and go to state 23

    expr                           shift and go to state 26

state 14

    (15) comando -> CAVALO . expr { comandos }
    (16) expr -> . expr BOI expr
    (17) expr -> . expr SUB expr
    (18) expr -> . expr MUL expr
    (19) expr -> . expr DIV expr
    (20) expr -> . expr MOD expr
    (21) expr -> . expr GT expr
    (22) expr -> . expr LT expr
    (23) expr -> . expr EQ expr
    (24) expr -> . ( expr )
    (25) expr -> . INT_CONST
    (26) expr -> . FLOAT_CONST
    (27) expr -> . STRING
    (28) expr -> . ID

    (               shift and go to state 19
    INT_CONST       shift and go to state 20
    FLOAT_CONST     shift and go to state 21
    STRING          shift and go to state 22
    ID              shift and go to state 23

    expr                           shift and go to state 27

state 15

    (2) decls -> decl ; . decls
    (2) decls -> . decl ; decls
    (3) decls -> .
    (4) decl -> . tipo ID
    (5) decl -> . tipo ID GALO expr
    (6) tipo -> . CARNEIRO
    (7) tipo -> . MACACO
    (8) tipo -> . CAO

    TIGRE           reduce using rule 3 (decls -> .)
    COBRA           reduce using rule 3 (decls -> .)
    ID              reduce using rule 3 (decls -> .)
    RATO            reduce using rule 3 (decls -> .)
    CAVALO          reduce using rule 3 (decls -> .)
    $end            reduce using rule 3 (decls -> .)
    CARNEIRO        shift and go to state 5
    MACACO          shift and go to state 6
    CAO             shift and go to state 7

    decl                           shift and go to state 3
    decls                          shift and go to state 28
    tipo                           shift and go to state 4

state 16

    (4) decl -> tipo ID .
    (5) decl -> tipo ID . GALO expr

    ;               reduce using rule 4 (decl -> tipo ID .)
    GALO            shift and go to state 29


state 17

    (9) comandos -> comando ; . comandos
    (9) comandos -> . comando ; comandos
    (10) comandos -> .
    (11) comando -> . TIGRE expr
    (12) comando -> . COBRA ID
    (13) comando -> . ID GALO expr
    (14) comando -> . RATO expr { comandos } DRAGAO { comandos }
    (15) comando -> . CAVALO expr { comandos }

    $end            reduce using rule 10 (comandos -> .)
    }               reduce using rule 10 (comandos -> .)
    TIGRE           shift and go to state 10
    COBRA           shift and go to state 11
    ID              shift and go to state 12
    RATO            shift and go to state 13
    CAVALO          shift and go to state 14

    comando                        shift and go to state 9
    comandos                       shift and go to state 30

state 18

    (11) comando -> TIGRE expr .
    (16) expr -> expr . BOI expr
    (17) expr -> expr . SUB expr
    (18) expr -> expr . MUL expr
    (19) expr -> expr . DIV expr
    (20) expr -> expr . MOD expr
    (21) expr -> expr . GT expr
    (22) expr -> expr . LT expr
    (23) expr -> expr . EQ expr

    ;               reduce using rule 11 (comando -> TIGRE expr .)
    BOI             shift and go to state 31
    SUB             shift and go to state 32
    MUL             shift and go to state 33
    DIV             shift and go to state 34
    MOD             shift and go to state 35
    GT              shift and go to state 36
    LT              shift and go to state 37
    EQ              shift and go to state 38


state 19

    (24) expr -> ( . expr )
    (16) expr -> . expr BOI expr
    (17) expr -> . expr SUB expr
    (18) expr -> . expr MUL expr
    (19) expr -> . expr DIV expr
    (20) expr -> . expr MOD expr
    (21) expr -> . expr GT expr
    (22) expr -> . expr LT expr
    (23) expr -> . expr EQ expr
    (24) expr -> . ( expr )
    (25) expr -> . INT_CONST
    (26) expr -> . FLOAT_CONST
    (27) expr -> . STRING
    (28) expr -> . ID

    (               shift and go to state 19
    INT_CONST       shift and go to state 20
    FLOAT_CONST     shift and go to state 21
    STRING          shift and go to state 22
    ID              shift and go to state 23

    expr                           shift and go to state 39

state 20

    (25) expr -> INT_CONST .

    BOI             reduce using rule 25 (expr -> INT_CONST .)
    SUB             reduce using rule 25 (expr -> INT_CONST .)
    MUL             reduce using rule 25 (expr -> INT_CONST .)
    DIV             reduce using rule 25 (expr -> INT_CONST .)
    MOD             reduce using rule 25 (expr -> INT_CONST .)
    GT              reduce using rule 25 (expr -> INT_CONST .)
    LT              reduce using rule 25 (expr -> INT_CONST .)
    EQ              reduce using rule 25 (expr -> INT_CONST .)
    ;               reduce using rule 25 (expr -> INT_CONST .)
    {               reduce using rule 25 (expr -> INT_CONST .)
    )               reduce using rule 25 (expr -> INT_CONST .)


state 21

    (26) expr -> FLOAT_CONST .

    BOI             reduce using rule 26 (expr -> FLOAT_CONST .)
    SUB             reduce using rule 26 (expr -> FLOAT_CONST .)
    MUL             reduce using rule 26 (expr -> FLOAT_CONST .)
    DIV             reduce using rule 26 (expr -> FLOAT_CONST .)
    MOD             reduce using rule 26 (expr -> FLOAT_CONST .)
    GT              reduce using rule 26 (expr -> FLOAT_CONST .)
    LT              reduce using rule 26 (expr -> FLOAT_CONST .)
    EQ              reduce using rule 26 (expr -> FLOAT_CONST .)
    ;               reduce using rule 26 (expr -> FLOAT_CONST .)
    {               reduce using rule 26 (expr -> FLOAT_CONST .)
    )               reduce using rule 26 (expr -> FLOAT_CONST .)


state 22

    (27) expr -> STRING .

    BOI             reduce using rule 27 (expr -> STRING .)
    SUB             reduce using rule 27 (expr -> STRING .)
    MUL             reduce using rule 27 (expr -> STRING .)
    DIV             reduce using rule 27 (expr -> STRING .)
    MOD             reduce using rule 27 (expr -> STRING .)
    GT              reduce using rule 27 (expr -> STRING .)
    LT              reduce using rule 27 (expr -> STRING .)
    EQ              reduce using rule 27 (expr -> STRING .)
    ;               reduce using rule 27 (expr -> STRING .)
    {               reduce using rule 27 (expr -> STRING .)
    )               reduce using rule 27 (expr -> STRING .)


state 23

    (28) expr -> ID .

    BOI             reduce using rule 28 (expr -> ID .)
    SUB             reduce using rule 28 (expr -> ID .)
    MUL             reduce using rule 28 (expr -> ID .)
    DIV             reduce using rule 28 (expr -> ID .)
    MOD             reduce using rule 28 (expr -> ID .)
    GT              reduce using rule 28 (expr -> ID .)
    LT              reduce using rule 28 (expr -> ID .)
    EQ              reduce using rule 28 (expr -> ID .)
    ;               reduce using rule 28 (expr -> ID .)
    {               reduce using rule 28 (expr -> ID .)
    )               reduce using rule 28 (expr -> ID .)


state 24

    (12) comando -> COBRA ID .

    ;               reduce using rule 12 (comando -> COBRA ID .)


state 25

    (13) comando -> ID GALO . expr
    (16) expr -> . expr BOI expr
    (17) expr -> . expr SUB expr
    (18) expr -> . expr MUL expr
    (19) expr -> . expr DIV expr
    (20) expr -> . expr MOD expr
    (21) expr -> . expr GT expr
    (22) expr -> . expr LT expr
    (23) expr -> . expr EQ expr
    (24) expr -> . ( expr )
    (25) expr -> . INT_CONST
    (26) expr -> . FLOAT_CONST
    (27) expr -> . STRING
    (28) expr -> . ID

    (               shift and go to state 19
    INT_CONST       shift and go to state 20
    FLOAT_CONST     shift and go to state 21
    STRING          shift and go to state 22
    ID              shift and go to state 23

    expr                           shift and go to state 40

state 26

    (14) comando -> RATO expr . { comandos } DRAGAO { comandos }
    (16) expr -> expr . BOI expr
    (17) expr -> expr . SUB expr
    (18) expr -> expr . MUL expr
    (19) expr -> expr . DIV expr
    (20) expr -> expr . MOD expr
    (21) expr -> expr . GT expr
    (22) expr -> expr . LT expr
    (23) expr -> expr . EQ expr

    {               shift and go to state 41
    BOI             shift and go to state 31
    SUB             shift and go to state 32
    MUL             shift and go to state 33
    DIV             shift and go to state 34
    MOD             shift and go to state 35
    GT              shift and go to state 36
    LT              shift and go to state 37
    EQ              shift and go to state 38


state 27

    (15) comando -> CAVALO expr . { comandos }
    (16) expr -> expr . BOI expr
    (17) expr -> expr . SUB expr
    (18) expr -> expr . MUL expr
    (19) expr -> expr . DIV expr
    (20) expr -> expr . MOD expr
    (21) expr -> expr . GT expr
    (22) expr -> expr . LT expr
    (23) expr -> expr . EQ expr

    {               shift and go to state 42
    BOI             shift and go to state 31
    SUB             shift and go to state 32
    MUL             shift and go to state 33
    DIV             shift and go to state 34
    MOD             shift and go to state 35
    GT              shift and go to state 36
    LT              shift and go to state 37
    EQ              shift and go to state 38


state 28

    (2) decls -> decl ; decls .

    TIGRE           reduce using rule 2 (decls -> decl ; decls .)
    COBRA           reduce using rule 2 (decls -> decl ; decls .)
    ID              reduce using rule 2 (decls -> decl ; decls .)
    RATO            reduce using rule 2 (decls -> decl ; decls .)
    CAVALO          reduce using rule 2 (decls -> decl ; decls .)
    $end            reduce using rule 2 (decls -> decl ; decls .)


state 29

    (5) decl -> tipo ID GALO . expr
    (16) expr -> . expr BOI expr
    (17) expr -> . expr SUB expr
    (18) expr -> . expr MUL expr
    (19) expr -> . expr DIV expr
    (20) expr -> . expr MOD expr
    (21) expr -> . expr GT expr
    (22) expr -> . expr LT expr
    (23) expr -> . expr EQ expr
    (24) expr -> . ( expr )
    (25) expr -> . INT_CONST
    (26) expr -> . FLOAT_CONST
    (27) expr -> . STRING
    (28) expr -> . ID

    (               shift and go to state 19
    INT_CONST       shift and go to state 20
    FLOAT_CONST     shift and go to state 21
    STRING          shift and go to state 22
    ID              shift and go to state 23

    expr                           shift and go to state 43

state 30

    (9) comandos -> comando ; comandos .

    $end            reduce using rule 9 (comandos -> comando ; comandos .)
    }               reduce using rule 9 (comandos -> comando ; comandos .)


state 31

    (16) expr -> expr BOI . expr
    (16) expr -> . expr BOI expr
    (17) expr -> . expr SUB expr
    (18) expr -> . expr MUL expr
    (19) expr -> . expr DIV expr
    (20) expr -> . expr MOD expr
    (21) expr -> . expr GT expr
    (22) expr -> . expr LT expr
    (23) expr -> . expr EQ expr
    (24) expr -> . ( expr )
    (25) expr -> . INT_CONST
    (26) expr -> . FLOAT_CONST
    (27) expr -> . STRING
    (28) expr -> . ID

    (               shift and go to state 19
    INT_CONST       shift and go to state 20
    FLOAT_CONST     shift and go to state 21
    STRING          shift and go to state 22
    ID              shift and go to state 23

    expr                           shift and go to state 44

state 32

    (17) expr -> expr SUB . expr
    (16) expr -> . expr BOI expr
    (17) expr -> . expr SUB expr
    (18) expr -> . expr MUL expr
    (19) expr -> . expr DIV expr
    (20) expr -> . expr MOD expr
    (21) expr -> . expr GT expr
    (22) expr -> . expr LT expr
    (23) expr -> . expr EQ expr
    (24) expr -> . ( expr )
    (25) expr -> . INT_CONST
    (26) expr -> . FLOAT_CONST
    (27) expr -> . STRING
    (28) expr -> . ID

    (               shift and go to state 19
    INT_CONST       shift and go to state 20
    FLOAT_CONST     shift and go to state 21
    STRING          shift and go to state 22
    ID              shift and go to state 23

    expr                           shift and go to state 45

state 33

    (18) expr -> expr MUL . expr
    (16) expr -> . expr BOI expr
    (17) expr -> . expr SUB expr
    (18) expr -> . expr MUL expr
    (19) expr -> . expr DIV expr
    (20) expr -> . expr MOD expr
    (21) expr -> . expr GT expr
    (22) expr -> . expr LT expr
    (23) expr -> . expr EQ expr
    (24) expr -> . ( expr )
    (25) expr -> . INT_CONST
    (26) expr -> . FLOAT_CONST
    (27) expr -> . STRING
    (28) expr -> . ID

    (               shift and go to state 19
    INT_CONST       shift and go to state 20
    FLOAT_CONST     shift and go to state 21
    STRING          shift and go to state 22
    ID              shift and go to state 23

    expr                           shift and go to state 46

state 34

    (19) expr -> expr DIV . expr
    (16) expr -> . expr BOI expr
    (17) expr -> . expr SUB expr
    (18) expr -> . expr MUL expr
    (19) expr -> . expr DIV expr
    (20) expr -> . expr MOD expr
    (21) expr -> . expr GT expr
    (22) expr -> . expr LT expr
    (23) expr -> . expr EQ expr
    (24) expr -> . ( expr )
    (25) expr -> . INT_CONST
    (26) expr -> . FLOAT_CONST
    (27) expr -> . STRING
    (28) expr -> . ID

    (               shift and go to state 19
    INT_CONST       shift and go to state 20
    FLOAT_CONST     shift and go to state 21
    STRING          shift and go to state 22
    ID              shift and go to state 23

    expr                           shift and go to state 47

state 35

    (20) expr -> expr MOD . expr
    (16) expr -> . expr BOI expr
    (17) expr -> . expr SUB expr
    (18) expr -> . expr MUL expr
    (19) expr -> . expr DIV expr
    (20) expr -> . expr MOD expr
    (21) expr -> . expr GT expr
    (22) expr -> . expr LT expr
    (23) expr -> . expr EQ expr
    (24) expr -> . ( expr )
    (25) expr -> . INT_CONST
    (26) expr -> . FLOAT_CONST
    (27) expr -> . STRING
    (28) expr -> . ID

    (               shift and go to state 19
    INT_CONST       shift and go to state 20
    FLOAT_CONST     shift and go to state 21
    STRING          shift and go to state 22
    ID              shift and go to state 23

    expr                           shift and go to state 48

state 36

    (21) expr -> expr GT . expr
    (16) expr -> . expr BOI expr
    (17) expr -> . expr SUB expr
    (18) expr -> . expr MUL expr
    (19) expr -> . expr DIV expr
    (20) expr -> . expr MOD expr
    (21) expr -> . expr GT expr
    (22) expr -> . expr LT expr
    (23) expr -> . expr EQ expr
    (24) expr -> . ( expr )
    (25) expr -> . INT_CONST
    (26) expr -> . FLOAT_CONST
    (27) expr -> . STRING
    (28) expr -> . ID

    (               shift and go to state 19
    INT_CONST       shift and go to state 20
    FLOAT_CONST     shift and go to state 21
    STRING          shift and go to state 22
    ID              shift and go to state 23

    expr                           shift and go to state 49

state 37

    (22) expr -> expr LT . expr
    (16) expr -> . expr BOI expr
    (17) expr -> . expr SUB expr
    (18) expr -> . expr MUL expr
    (19) expr -> . expr DIV expr
    (20) expr -> . expr MOD expr
    (21) expr -> . expr GT expr
    (22) expr -> . expr LT expr
    (23) expr -> . expr EQ expr
    (24) expr -> . ( expr )
    (25) expr -> . INT_CONST
    (26) expr -> . FLOAT_CONST
    (27) expr -> . STRING
    (28) expr -> . ID

    (               shift and go to state 19
    INT_CONST       shift and go to state 20
    FLOAT_CONST     shift and go to state 21
    STRING          shift and go to state 22
    ID              shift and go to state 23

    expr                           shift and go to state 50

state 38

    (23) expr -> expr EQ . expr
    (16) expr -> . expr BOI expr
    (17) expr -> . expr SUB expr
    (18) expr -> . expr MUL expr
    (19) expr -> . expr DIV expr
    (20) expr -> . expr MOD expr
    (21) expr -> . expr GT expr
    (22) expr -> . expr LT expr
    (23) expr -> . expr EQ expr
    (24) expr -> . ( expr )
    (25) expr -> . INT_CONST
    (26) expr -> . FLOAT_CONST
    (27) expr -> . STRING
    (28) expr -> . ID

    (               shift and go to state 19
    INT_CONST       shift and go to state 20
    FLOAT_CONST     shift and go to state 21
    STRING          shift and go to state 22
    ID              shift and go to state 23

    expr                           shift and go to state 51

state 39

    (24) expr -> ( expr . )
    (16) expr -> expr . BOI expr
    (17) expr -> expr . SUB expr
    (18) expr -> expr . MUL expr
    (19) expr -> expr . DIV expr
    (20) expr -> expr . MOD expr
    (21) expr -> expr . GT expr
    (22) expr -> expr . LT expr
    (23) expr -> expr . EQ expr

    )               shift and go to state 52
    BOI             shift and go to state 31
    SUB             shift and go to state 32
    MUL             shift and go to state 33
    DIV             shift and go to state 34
    MOD             shift and go to state 35
    GT              shift and go to state 36
    LT              shift and go to state 37
    EQ              shift and go to state 38


state 40

    (13) comando -> ID GALO expr .
    (16) expr -> expr . BOI expr
    (17) expr -> expr . SUB expr
    (18) expr -> expr . MUL expr
    (19) expr -> expr . DIV expr
    (20) expr -> expr . MOD expr
    (21) expr -> expr . GT expr
    (22) expr -> expr . LT expr
    (23) expr -> expr . EQ expr

    ;               reduce using rule 13 (comando -> ID GALO expr .)
    BOI             shift and go to state 31
    SUB             shift and go to state 32
    MUL             shift and go to state 33
    DIV             shift and go to state 34
    MOD             shift and go to state 35
    GT              shift and go to state 36
    LT              shift and go to state 37
    EQ              shift and go to state 38


state 41

    (14) comando -> RATO expr { . comandos } DRAGAO { comandos }
    (9) comandos -> . comando ; comandos
    (10) comandos -> .
    (11) comando -> . TIGRE expr
    (12) comando -> . COBRA ID
    (13) comando -> . ID GALO expr
    (14) comando -> . RATO expr { comandos } DRAGAO { comandos }
    (15) comando -> . CAVALO expr { comandos }

    }               reduce using rule 10 (comandos -> .)
    TIGRE           shift and go to state 10
    COBRA           shift and go to state 11
    ID              shift and go to state 12
    RATO            shift and go to state 13
    CAVALO          shift and go to state 14

    comandos                       shift and go to state 53
    comando                        shift and go to state 9

state 42

    (15) comando -> CAVALO expr { . comandos }
    (9) comandos -> . comando ; comandos
    (10) comandos -> .
    (11) comando -> . TIGRE expr
    (12) comando -> . COBRA ID
    (13) comando -> . ID GALO expr
    (14) comando -> . RATO expr { comandos } DRAGAO { comandos }
    (15) comando -> . CAVALO expr { comandos }

    }               reduce using rule 10 (comandos -> .)
    TIGRE           shift and go to state 10
    COBRA           shift and go to state 11
    ID              shift and go to state 12
    RATO            shift and go to state 13
    CAVALO          shift and go to state 14

    comandos                       shift and go to state 54
    comando                        shift and go to state 9

state 43

    (5) decl -> tipo ID GALO expr .
    (16) expr -> expr . BOI expr
    (17) expr -> expr . SUB expr
    (18) expr -> expr . MUL expr
    (19) expr -> expr . DIV expr
    (20) expr -> expr . MOD expr
    (21) expr -> expr . GT expr
    (22) expr -> expr . LT expr
    (23) expr -> expr . EQ expr

    ;               reduce using rule 5 (decl -> tipo ID GALO expr .)
    BOI             shift and go to state 31
    SUB             shift and go to state 32
    MUL             shift and go to state 33
    DIV             shift and go to state 34
    MOD             shift and go to state 35
    GT              shift and go to state 36
    LT              shift and go to state 37
    EQ              shift and go to state 38


state 44

    (16) expr -> expr BOI expr .
    (16) expr -> expr . BOI expr
    (17) expr -> expr . SUB expr
    (18) expr -> expr . MUL expr
    (19) expr -> expr . DIV expr
    (20) expr -> expr . MOD expr
    (21) expr -> expr . GT expr
    (22) expr -> expr . LT expr
    (23) expr -> expr . EQ expr

  ! shift/reduce conflict for BOI resolved as shift
  ! shift/reduce conflict for SUB resolved as shift
  ! shift/reduce conflict for MUL resolved as shift
  ! shift/reduce conflict for DIV resolved as shift
  ! shift/reduce conflict for MOD resolved as shift
  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for EQ resolved as shift
    ;               reduce using rule 16 (expr -> expr BOI expr .)
    {               reduce using rule 16 (expr -> expr BOI expr .)
    )               reduce using rule 16 (expr -> expr BOI expr .)
    BOI             shift and go to state 31
    SUB             shift and go to state 32
    MUL             shift and go to state 33
    DIV             shift and go to state 34
    MOD             shift and go to state 35
    GT              shift and go to state 36
    LT              shift and go to state 37
    EQ              shift and go to state 38

  ! BOI             [ reduce using rule 16 (expr -> expr BOI expr .) ]
  ! SUB             [ reduce using rule 16 (expr -> expr BOI expr .) ]
  ! MUL             [ reduce using rule 16 (expr -> expr BOI expr .) ]
  ! DIV             [ reduce using rule 16 (expr -> expr BOI expr .) ]
  ! MOD             [ reduce using rule 16 (expr -> expr BOI expr .) ]
  ! GT              [ reduce using rule 16 (expr -> expr BOI expr .) ]
  ! LT              [ reduce using rule 16 (expr -> expr BOI expr .) ]
  ! EQ              [ reduce using rule 16 (expr -> expr BOI expr .) ]


state 45

    (17) expr -> expr SUB expr .
    (16) expr -> expr . BOI expr
    (17) expr -> expr . SUB expr
    (18) expr -> expr . MUL expr
    (19) expr -> expr . DIV expr
    (20) expr -> expr . MOD expr
    (21) expr -> expr . GT expr
    (22) expr -> expr . LT expr
    (23) expr -> expr . EQ expr

  ! shift/reduce conflict for BOI resolved as shift
  ! shift/reduce conflict for SUB resolved as shift
  ! shift/reduce conflict for MUL resolved as shift
  ! shift/reduce conflict for DIV resolved as shift
  ! shift/reduce conflict for MOD resolved as shift
  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for EQ resolved as shift
    ;               reduce using rule 17 (expr -> expr SUB expr .)
    {               reduce using rule 17 (expr -> expr SUB expr .)
    )               reduce using rule 17 (expr -> expr SUB expr .)
    BOI             shift and go to state 31
    SUB             shift and go to state 32
    MUL             shift and go to state 33
    DIV             shift and go to state 34
    MOD             shift and go to state 35
    GT              shift and go to state 36
    LT              shift and go to state 37
    EQ              shift and go to state 38

  ! BOI             [ reduce using rule 17 (expr -> expr SUB expr .) ]
  ! SUB             [ reduce using rule 17 (expr -> expr SUB expr .) ]
  ! MUL             [ reduce using rule 17 (expr -> expr SUB expr .) ]
  ! DIV             [ reduce using rule 17 (expr -> expr SUB expr .) ]
  ! MOD             [ reduce using rule 17 (expr -> expr SUB expr .) ]
  ! GT              [ reduce using rule 17 (expr -> expr SUB expr .) ]
  ! LT              [ reduce using rule 17 (expr -> expr SUB expr .) ]
  ! EQ              [ reduce using rule 17 (expr -> expr SUB expr .) ]


state 46

    (18) expr -> expr MUL expr .
    (16) expr -> expr . BOI expr
    (17) expr -> expr . SUB expr
    (18) expr -> expr . MUL expr
    (19) expr -> expr . DIV expr
    (20) expr -> expr . MOD expr
    (21) expr -> expr . GT expr
    (22) expr -> expr . LT expr
    (23) expr -> expr . EQ expr

  ! shift/reduce conflict for BOI resolved as shift
  ! shift/reduce conflict for SUB resolved as shift
  ! shift/reduce conflict for MUL resolved as shift
  ! shift/reduce conflict for DIV resolved as shift
  ! shift/reduce conflict for MOD resolved as shift
  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for EQ resolved as shift
    ;               reduce using rule 18 (expr -> expr MUL expr .)
    {               reduce using rule 18 (expr -> expr MUL expr .)
    )               reduce using rule 18 (expr -> expr MUL expr .)
    BOI             shift and go to state 31
    SUB             shift and go to state 32
    MUL             shift and go to state 33
    DIV             shift and go to state 34
    MOD             shift and go to state 35
    GT              shift and go to state 36
    LT              shift and go to state 37
    EQ              shift and go to state 38
